--- a/connect_node.ipynb
+++ b/connect_node.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6a5ff979",
+   "execution_count": 1,
+   "id": "38fe02cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('hello')"
+    "import requests\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "44abb9fd",
    "metadata": {},
    "outputs": [
@@ -46,18 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "af7fd91b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c7f6dbb1",
    "metadata": {},
    "outputs": [],
@@ -72,12 +54,12 @@
     "url = f\"https://api.etherscan.io/api?module=contract&action=getabi&address={FACTORY_V2_ADDR}&apikey={ETHERSCAN_API_KEY}\"\n",
     "\n",
     "response = requests.get(url)\n",
-    "FACTORY_ABI = json.loads(response.json()['result'])"
+    "FACTORY_ABI = json.loads(response.json()['result'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "559e74ed",
    "metadata": {},
    "outputs": [],
@@ -149,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "23c88e3d",
    "metadata": {},
    "outputs": [
@@ -185,7 +167,6 @@
     "print(\"Pool creation block:\", creation_block)\n",
     "\n",
     "timestamp = w3.eth.get_block(creation_block)[\"timestamp\"]\n",
-    "from datetime import datetime\n",
     "print(\"Pool created at:\", datetime.utcfromtimestamp(timestamp))\n"
    ]
   },
@@ -273,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "dbf15d39",
    "metadata": {},
    "outputs": [
@@ -355,6 +336,7 @@
     "\n",
     "w3 = Web3(Web3.HTTPProvider(ALCHEMY_URL))\n",
     "assert w3.is_connected(), \"Not connected\"\n",
+    "\n",
     "\n",
     "# Get creation block\n",
     "def get_creation_block(address):\n",
@@ -1170,15 +1152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "9e764943",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🕒 Pool created at: 2025-05-01 09:01:23+00:00\n"
+     "ename": "NameError",
+     "evalue": "name 'pool_address' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(res[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresult\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mblockNumber\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m creation_block \u001b[38;5;241m=\u001b[39m get_contract_creation_block(pool_address, ETHERSCAN_API_KEY)\n\u001b[1;32m     15\u001b[0m timestamp \u001b[38;5;241m=\u001b[39m w3\u001b[38;5;241m.\u001b[39meth\u001b[38;5;241m.\u001b[39mget_block(creation_block)[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime, timezone\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pool_address' is not defined"
      ]
     }
    ],
@@ -1215,8 +1201,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "id": "9b4ef981",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting eth-abi\n",
+      "  Using cached eth_abi-5.2.0-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: eth-utils>=2.0.0 in /opt/anaconda3/lib/python3.12/site-packages (from eth-abi) (5.3.0)\n",
+      "Requirement already satisfied: eth-typing>=3.0.0 in /opt/anaconda3/lib/python3.12/site-packages (from eth-abi) (5.2.0)\n",
+      "Requirement already satisfied: parsimonious<0.11.0,>=0.10.0 in /opt/anaconda3/lib/python3.12/site-packages (from eth-abi) (0.10.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.5.0 in /opt/anaconda3/lib/python3.12/site-packages (from eth-typing>=3.0.0->eth-abi) (4.12.2)\n",
+      "Requirement already satisfied: eth-hash>=0.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from eth-utils>=2.0.0->eth-abi) (0.7.1)\n",
+      "Requirement already satisfied: cytoolz>=0.10.1 in /opt/anaconda3/lib/python3.12/site-packages (from eth-utils>=2.0.0->eth-abi) (0.12.2)\n",
+      "Requirement already satisfied: pydantic<3,>=2.0.0 in /opt/anaconda3/lib/python3.12/site-packages (from eth-utils>=2.0.0->eth-abi) (2.8.2)\n",
+      "Requirement already satisfied: regex>=2022.3.15 in /opt/anaconda3/lib/python3.12/site-packages (from parsimonious<0.11.0,>=0.10.0->eth-abi) (2023.12.25)\n",
+      "Requirement already satisfied: toolz>=0.8.0 in /opt/anaconda3/lib/python3.12/site-packages (from cytoolz>=0.10.1->eth-utils>=2.0.0->eth-abi) (0.12.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in /opt/anaconda3/lib/python3.12/site-packages (from pydantic<3,>=2.0.0->eth-utils>=2.0.0->eth-abi) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in /opt/anaconda3/lib/python3.12/site-packages (from pydantic<3,>=2.0.0->eth-utils>=2.0.0->eth-abi) (2.20.1)\n",
+      "Using cached eth_abi-5.2.0-py3-none-any.whl (28 kB)\n",
+      "Installing collected packages: eth-abi\n",
+      "Successfully installed eth-abi-5.2.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install eth-abi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c5da9bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'decode_abi' from 'eth_abi.abi' (/opt/anaconda3/lib/python3.12/site-packages/eth_abi/abi.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime, timezone\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01meth_abi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mabi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m decode_abi\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# ① — Setup providers and contract ABIs\u001b[39;00m\n\u001b[1;32m     10\u001b[0m ALCHEMY_URL \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://eth-mainnet.g.alchemy.com/v2/XtWfn0d5ooMWIVs5AQMxOAb474Km-hs7\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'decode_abi' from 'eth_abi.abi' (/opt/anaconda3/lib/python3.12/site-packages/eth_abi/abi.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# Imports\n",
+    "from web3 import Web3\n",
+    "import requests, json\n",
+    "from datetime import datetime, timezone\n",
+    "import pandas as pd\n",
+    "from eth_abi.abi import decode_abi\n",
+    "\n",
+    "\n",
+    "# ① — Setup providers and contract ABIs\n",
+    "ALCHEMY_URL = \"https://eth-mainnet.g.alchemy.com/v2/XtWfn0d5ooMWIVs5AQMxOAb474Km-hs7\"\n",
+    "ETHERSCAN_KEY = \"NP263JVHJEZUFCC72UQKX93JTDZJ8WPGUW\"\n",
+    "w3 = Web3(Web3.HTTPProvider(ALCHEMY_URL))\n",
+    "assert w3.is_connected(), \"Node not connected\"\n",
+    "\n",
+    "# ② — Uniswap V3 Factory ABI & instance\n",
+    "FACTORY = \"0x1F98431c8aD98523631AE4a59f267346ea31F984\"\n",
+    "url = f\"https://api.etherscan.io/api?module=contract&action=getabi&address={FACTORY}&apikey={ETHERSCAN_KEY}\"\n",
+    "factory_abi = json.loads(requests.get(url).json()['result'])\n",
+    "factory = w3.eth.contract(address=FACTORY, abi=factory_abi)\n",
+    "\n",
+    "# ③ — Define tokens\n",
+    "TOKEN = w3.to_checksum_address(\"0xEd291c4EA45be02481E7f8359cAaDA27d5909f42\")\n",
+    "WETH  = w3.to_checksum_address(\"0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2\")\n",
+    "FEES = [100, 500, 3000, 10000]\n",
+    "\n",
+    "# ④ — Find the pool(s)\n",
+    "pools = {}\n",
+    "for fee in FEES:\n",
+    "    addr = factory.functions.getPool(TOKEN, WETH, fee).call()\n",
+    "    if int(addr, 16) != 0:\n",
+    "        pools[fee] = w3.to_checksum_address(addr)\n",
+    "print(\"Pools found:\", pools)\n",
+    "\n",
+    "# Choose fee—you can pick the only or the earliest created one\n",
+    "fee, pool = next(iter(pools.items()))\n",
+    "print(\"➡️ Using pool:\", pool, \"with fee tier:\", fee)\n",
+    "\n",
+    "# ⑤ — Get pool creation block\n",
+    "def get_creation_block(addr):\n",
+    "    r = requests.get(f\"https://api.etherscan.io/api?module=contract&action=getcontractcreation&contractaddresses={addr}&apikey={ETHERSCAN_KEY}\")\n",
+    "    j = r.json()\n",
+    "    return int(j[\"result\"][0][\"blockNumber\"]) if j[\"status\"] == \"1\" else None\n",
+    "\n",
+    "creation = get_creation_block(pool)\n",
+    "print(\"Pool created at block:\", creation, \" time:\", datetime.fromtimestamp(w3.eth.get_block(creation)['timestamp'], tz=timezone.utc))\n",
+    "\n",
+    "# ⑥ — Fetch swap logs with batching\n",
+    "swap_topic = w3.keccak(text=\"Swap(address,address,int256,int256,uint160,uint128,int24)\").hex()\n",
+    "start = creation\n",
+    "end = min(start + int(5*24*3600/12), w3.eth.block_number)  # ~5 days window\n",
+    "\n",
+    "logs = []\n",
+    "step = 600  # ~2 hours per chunk\n",
+    "for fb in range(start, end, step):\n",
+    "    tb = min(fb + step - 1, end)\n",
+    "    resp = requests.post(ALCHEMY_URL,\n",
+    "        json={\"jsonrpc\":\"2.0\",\"id\":1,\"method\":\"eth_getLogs\",\n",
+    "              \"params\":[{\"fromBlock\":hex(fb),\"toBlock\":hex(tb),\"address\":pool,\"topics\":[swap_topic]}]})\n",
+    "    batch = resp.json().get(\"result\", [])\n",
+    "    logs += batch\n",
+    "print(f\"Fetched {len(logs)} Swap logs\")\n",
+    "\n",
+    "# ⑦ — Decode swaps and build 5-min candles\n",
+    "records = []\n",
+    "for log in logs:\n",
+    "    values = decode_abi([\"int256\",\"int256\",\"uint160\",\"uint128\",\"int24\"], bytes.fromhex(log[\"data\"][2:]))\n",
+    "    a0, a1 = values[0], values[1]\n",
+    "    ts = w3.eth.get_block(int(log[\"blockNumber\"], 16))[\"timestamp\"]\n",
+    "    price = abs(a1/a0) if a0 else None\n",
+    "    if price:\n",
+    "        records.append({\"time\": datetime.fromtimestamp(ts, tz=timezone.utc), \"price\": price})\n",
+    "\n",
+    "df = pd.DataFrame(records).set_index(\"time\")\n",
+    "ohlcv = df['price'].resample(\"5T\").agg(['first','max','min','last','count'])\n",
+    "ohlcv.columns = ['open','high','low','close','trades']\n",
+    "print(ohlcv.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5abc0b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MismatchedABI",
+     "evalue": "The event signature did not match the provided ABI",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMismatchedABI\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 45\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Example raw log (replace this with what you get from eth_getLogs)\u001b[39;00m\n\u001b[1;32m     24\u001b[0m log \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddress\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0x8ad599c3a0ff1de082011efddc58f1908eb6e6d8\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtopics\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mremoved\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m     43\u001b[0m }\n\u001b[0;32m---> 45\u001b[0m decoded \u001b[38;5;241m=\u001b[39m get_event_data(w3\u001b[38;5;241m.\u001b[39mcodec, swap_event_abi, log)\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28mprint\u001b[39m(decoded[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124margs\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/cytoolz/functoolz.pyx:263\u001b[0m, in \u001b[0;36mcytoolz.functoolz.curry.__call__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/web3/_utils/events.py:234\u001b[0m, in \u001b[0;36mget_event_data\u001b[0;34m(abi_codec, event_abi, log_entry)\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[38;5;129m@curry\u001b[39m\n\u001b[1;32m    225\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_event_data\u001b[39m(\n\u001b[1;32m    226\u001b[0m     abi_codec: ABICodec,\n\u001b[1;32m    227\u001b[0m     event_abi: ABIEvent,\n\u001b[1;32m    228\u001b[0m     log_entry: LogReceipt,\n\u001b[1;32m    229\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m EventData:\n\u001b[1;32m    230\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    231\u001b[0m \u001b[38;5;124;03m    Given an event ABI and a log entry for that event, return the decoded\u001b[39;00m\n\u001b[1;32m    232\u001b[0m \u001b[38;5;124;03m    event data\u001b[39;00m\n\u001b[1;32m    233\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 234\u001b[0m     log_topics \u001b[38;5;241m=\u001b[39m get_event_log_topics(event_abi, log_entry[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtopics\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m    235\u001b[0m     log_topics_bytes \u001b[38;5;241m=\u001b[39m [_log_entry_data_to_bytes(topic) \u001b[38;5;28;01mfor\u001b[39;00m topic \u001b[38;5;129;01min\u001b[39;00m log_topics]\n\u001b[1;32m    236\u001b[0m     log_topics_abi \u001b[38;5;241m=\u001b[39m get_indexed_event_inputs(event_abi)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/web3/utils/abi.py:779\u001b[0m, in \u001b[0;36mget_event_log_topics\u001b[0;34m(event_abi, topics)\u001b[0m\n\u001b[1;32m    777\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MismatchedABI(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected non-anonymous event to have 1 or more topics\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    778\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m event_abi_to_log_topic(event_abi) \u001b[38;5;241m!=\u001b[39m log_topic_to_bytes(topics[\u001b[38;5;241m0\u001b[39m]):\n\u001b[0;32m--> 779\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MismatchedABI(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe event signature did not match the provided ABI\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    780\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    781\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m topics[\u001b[38;5;241m1\u001b[39m:]\n",
+      "\u001b[0;31mMismatchedABI\u001b[0m: The event signature did not match the provided ABI"
+     ]
+    }
+   ],
+   "source": [
+    "from web3 import Web3\n",
+    "from web3._utils.events import get_event_data\n",
+    "\n",
+    "# Your Alchemy RPC\n",
+    "w3 = Web3(Web3.HTTPProvider(\"https://eth-mainnet.g.alchemy.com/v2/XtWfn0d5ooMWIVs5AQMxOAb474Km-hs7\"))\n",
+    "\n",
+    "# ABI for Uniswap V3 Swap event\n",
+    "swap_event_abi = {\n",
+    "    \"anonymous\": False,\n",
+    "    \"inputs\": [\n",
+    "        {\"indexed\": True, \"internalType\": \"address\", \"name\": \"sender\", \"type\": \"address\"},\n",
+    "        {\"indexed\": True, \"internalType\": \"address\", \"name\": \"recipient\", \"type\": \"address\"},\n",
+    "        {\"indexed\": False, \"internalType\": \"int256\", \"name\": \"amount0\", \"type\": \"int256\"},\n",
+    "        {\"indexed\": False, \"internalType\": \"int256\", \"name\": \"amount1\", \"type\": \"int256\"},\n",
+    "        {\"indexed\": False, \"internalType\": \"uint160\", \"name\": \"sqrtPriceX96\", \"type\": \"uint160\"},\n",
+    "        {\"indexed\": False, \"internalType\": \"uint128\", \"name\": \"liquidity\", \"type\": \"uint128\"},\n",
+    "        {\"indexed\": False, \"internalType\": \"int24\", \"name\": \"tick\", \"type\": \"int24\"},\n",
+    "    ],\n",
+    "    \"name\": \"Swap\",\n",
+    "    \"type\": \"event\"\n",
+    "}\n",
+    "\n",
+    "# Example raw log (replace this with what you get from eth_getLogs)\n",
+    "log = {\n",
+    "    \"address\": \"0x8ad599c3a0ff1de082011efddc58f1908eb6e6d8\",\n",
+    "    \"topics\": [\n",
+    "        \"0xd78ad95fa46c994b6551d0da85fc275fe613ce329c1e0d7d49d85a4fdf9cdb7b\",\n",
+    "        \"0x000000000000000000000000a16081f360e3847006db660bae1c6d1b2e17ec2a\",\n",
+    "        \"0x000000000000000000000000f39fd6e51aad88f6f4ce6ab8827279cfffb92266\"\n",
+    "    ],\n",
+    "    \"data\": \"0x\" +\n",
+    "        \"fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffd8f60\" +  # amount0\n",
+    "        \"0000000000000000000000000000000000000000000000000000000000005c28\" +  # amount1\n",
+    "        \"0000000000000000000000000000000000000000000000000000000001f4a1d3\" +  # sqrtPriceX96\n",
+    "        \"00000000000000000000000000000000000000000000000000000000000f4240\" +  # liquidity\n",
+    "        \"fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffef0\",  # tick\n",
+    "    \"blockNumber\": \"0x123456\",\n",
+    "    \"transactionHash\": \"0xabc...\",\n",
+    "    \"transactionIndex\": \"0x0\",\n",
+    "    \"blockHash\": \"0xabc...\",\n",
+    "    \"logIndex\": \"0x0\",\n",
+    "    \"removed\": False\n",
+    "}\n",
+    "\n",
+    "decoded = get_event_data(w3.codec, swap_event_abi, log)\n",
+    "print(decoded['args'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce9a53e6",
    "metadata": {},
    "outputs": [],
    "source": []
